--- a/MovieSearch.UI.WebApi/appsettings.json
+++ b/MovieSearch.UI.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "MovieSearchDb": "Data Source=.;Initial Catalog=MovieSearchDb;Integrated Security=True"
+    "MovieSearchDbContext": "Data Source=.;Initial Catalog=MovieSearchDb;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,8 @@
   },
   "OmDb": {
     "Url": "http://www.omdbapi.com/?apikey=c5de58c3"
+  },
+  "Caching": {
+    "SlidingExpirationTime": 12
   }
 }
