--- a/MovieSearch.UI.WebApi/appsettings.json
+++ b/MovieSearch.UI.WebApi/appsettings.json
@@ -5,7 +5,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
-      "Microsoft": "Information"
+      "Microsoft": "Information",
+      "Hangfire": "Error"
     }
   },
   "OmDb": {
@@ -16,5 +17,8 @@
   },
   "Jwt": {
     "Secret": "MovieSearchWebAppSecret"
+  },
+  "Hangfire": {
+    "IntervalInMinutes": 2
   }
 }
