--- a/MovieSearch.UI.WebApi/MovieSearch.UI.WebApi.csproj
+++ b/MovieSearch.UI.WebApi/MovieSearch.UI.WebApi.csproj
@@ -6,13 +6,15 @@
 
   <ItemGroup>
     <Folder Include="Impls\Helpers\" />
-    <Folder Include="Intefaces\" />
     <Folder Include="Models\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.3" />
+    <PackageReference Include="Hangfire.Core" Version="1.7.3" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.0-preview6.19304.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
